2012-11-08  Romain Francois <romain@r-enthusiasts.com>

        * R/Module.R: Module functions taking no arguments don't get the ellipsis
        anymore in their formals
        * src/Module.cpp: passing up the number of arguments of the function
        * R/Attributes.R: added cppEval
        * man/cppEval.Rd: documentation for cppeval
        
2012-11-07  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: derive depends from package LinkingTo; change 
        sourceCpp plugin parameter to depends and respect Rcpp::interfaces
        generated include files
        * src/Attributes.cpp: validate exported C++ functions before calling;
        use static rather than inline for stubs to avoid call-site bloat;
        improved error message when package hpp already exists; import Rcpp
        namespace into package shim namespace
        * src/AttributesParser.h: add signature and isHidden methods
        * src/AttributesParser.cpp: add signature and isHidden methods
        * src/exceptions.cpp: add function_not_exported exception
        * include/Rcpp/exceptions.h: add function_not_exported exception
        * man/cppFunction.Rd: update documentation
        * man/sourceCpp.Rd: update documentation
        * man/compileAttributes.Rd: update documentation
        * man/dependsAttribute.Rd: update documentation
        * man/exportAttribute.Rd: update documentation
        * man/interfacesAttribute.Rd: update documentation

2012-11-07  Romain Francois <romain@r-enthusiasts.com>

        * src/Language.cpp: Language gains a fast_eval method, without the whole try/catch
        * src/barrier.cpp: function char_nocheck to avoid the check in using CHAR
        * include/Rcpp/sugar/functions/unique.h: sugar unique and sort_unique
        using unordered_set (perhaps we could use it from c++11). 

2012-11-06  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: tweak whitespace in verbose mode
        * src/AttributesParser.h: support for interfaces attribute